--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -77,6 +77,7 @@
     "langsmith": "^0.3.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
+    "mammoth": "^1.9.1",
     "next": "14.2.25",
     "nuqs": "^2.4.1",
     "pdf-parse": "^1.1.1",
@@ -94,6 +95,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss-animate": "^1.0.7",
+    "turndown": "^7.2.0",
     "uuid": "^10.0.0",
     "zod": "^3.23.8",
     "zustand": "^5.0.3"
