--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -69,8 +69,10 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
+    "docx": "^9.5.1",
     "dotenv": "^16.4.5",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.11.9",
     "groq-sdk": "^0.13.0",
     "js-cookie": "^3.0.5",
@@ -78,6 +80,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "mammoth": "^1.9.1",
+    "marked": "^16.1.1",
     "next": "14.2.25",
     "nuqs": "^2.4.1",
     "pdf-parse": "^1.1.1",
